Fix listing page
