# backend-laravel/app/Models/Document.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Concerns\HasUuids;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+class Document extends Model
+{
+    use HasFactory, HasUuids;
+
+    protected $fillable = [
+        'tenant_id',
+        'model',
+        'model_id',
+        'type',
+        'order',
+        'url',
+    ];
+
+    protected function casts(): array
+    {
+        return [
+            'order' => 'integer',
+        ];
+    }
+
+    public function tenant(): BelongsTo
+    {
+        return $this->belongsTo(Tenant::class);
+    }
+}
